Fixed the top margin for the breadcrumb on mobile

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -299,6 +299,10 @@ article {
       width: 100%;
     }
 
+      .breadcrumb {
+      margin-top: 40px;
+    }
+
     h1 {
       margin-top: 20px;
       font-size: 40px;
